--- a/scss/layout/_clients-section.scss
+++ b/scss/layout/_clients-section.scss
@@ -7,7 +7,9 @@
     justify-content: center;
     margin: 0;
     padding: 0;
-    gap: 30px;}
+    gap: 30px; 
+    @media screen and (max-width: 480px)
+      {  width: 448;display: grid; grid-template-columns: 1fr 1fr; gap: 30px; margin: 0; align-items: center; justify-content: center; };}
   }
   
   
@@ -31,10 +33,11 @@
     border-color: var(--active-button-color);
     transition: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);}
-  }
+     @media screen and (max-width: 480px)
+      {  width: 100%;margin:auto; align-items: center  ;}
   
 .clients-section__logo-icon {
     fill: currentColor;
     transition: color, 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1)
-  }
+  }}
