--- a/scss/layout/_team-section.scss
+++ b/scss/layout/_team-section.scss
@@ -9,6 +9,8 @@
         margin: 0;
         padding: 0;}
   }
+  .team-section__list{ @media screen and (max-width: 480px)
+    {  width: 448;display: block; };}
   
 
   
