--- a/scss/components/_backdrop.scss
+++ b/scss/components/_backdrop.scss
@@ -8,5 +8,7 @@
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.2);
-    transition: opacity, 250ms linear, visibility 250ms ease-in-out
+    transition: opacity, 250ms linear, visibility 250ms ease-in-out;
+    @media screen and (max-width: 480px)
+    {  max-width: 100%;display: flex;}
   }
