--- a/scss/components/_contact.scss
+++ b/scss/components/_contact.scss
@@ -5,6 +5,9 @@
     padding-right: 0;
     margin-left: 0;
     padding-left: 0;
+    @media screen and (max-width: 480px)
+    {width: 480px;display: none; padding-top: 0;
+      padding-bottom: 0;padding: 0;}
   
   }
   
@@ -17,10 +20,13 @@
     margin-left: auto;
     margin-right: 0;
     padding: 0;
+    @media screen and (max-width: 480px)
+    {width: 480px;display: none; 
 
     &__icon{fill: currentColor;
         margin-right: 3px;}
-  }
+    
+    }}
   
   
   
