--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -2,8 +2,17 @@
     display: flex;
     align-items: center;
     margin-left: auto;
-  }
-  
+    width: 100%;
+    @media screen and (max-width: 480px)
+    {  width: 448;margin-left:auto;margin-right:auto;position: relative; padding-top: 16px; padding-bottom: 16px; };
+    
+    
+    @media screen and (mix-width: 768px)
+    {width: 768px;display: flex; 
+    
+    
+    
+    }}
   header.no-transparency {
     background-color: white;
   
@@ -26,7 +35,10 @@
     line-height: 31px;
     letter-spacing: 0.03em;
     color: #000000;
-    margin-right: 93px;
+    @media screen and (min-width:1200px)
+    {max-width: 1200px;margin-right: 93px;}
+    
+    
   }
 
   .header__border {
