--- a/scss/layout/_main-window.scss
+++ b/scss/layout/_main-window.scss
@@ -1,23 +1,23 @@
 .main-window__container {
     text-align: center;
     min-height: 600px;
-  
+    @media screen and (max-width: 480px)
+    {width: 100%;display: block};
   }
   
   .main-window {
     padding-top: 200px;
     background: #2f303a;
     background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/studiopage/8.jpg);
-    /*url("../images/studiopage/8.jpg");/*/
     background-repeat: no-repeat;
     background-size: cover;
-    min-height: 600px;
     max-height: 600px;
-    min-width: 1600px;
     max-width: 1600px;
     background-position: center;
     margin-right: auto;
     margin-left: auto;
+    @media screen and (max-width: 480px)
+    {max-width: 100%;display: block};
 
 &__title{font-style: normal;
     font-weight: 900;
@@ -25,7 +25,13 @@
     line-height: calc(60/44);
     letter-spacing: 0.06em;
     text-transform: uppercase;
-    color: #ffffff;}}
+    color: #ffffff;}
+    @media screen and (max-width: 480px)
+    {width: 100%;display: block; background-position: auto;
+    };
+   
+  }
+
   
   
   
