--- a/scss/layout/_navigation.scss
+++ b/scss/layout/_navigation.scss
@@ -7,16 +7,47 @@
     color: #212121;
     cursor: pointer;
     transition: color, 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1)
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    @media screen and (max-width: 481px)
+    {display: none;}
+
+
 }
 
     &__list{display: flex;
     gap: 50px;
     padding: 0;
     margin: 0;} 
+    @media screen and (max-width: 481px)
+    {display: none;}
 
    
 }
+.menu__burger{display: flex; ;}
+
+
+.menu__button-burger{
+  background-color: transparent;border-color: transparent;
+  @media screen and (min-width: 481px)
+  {display: none; position:absolute; left:0;  }
+  padding-left: auto;
+  padding-right: auto;
+  display: flex;
+  padding-top: 0;
+  position: absolute; top:22px; right:16px ;
+}
+
+  
+
+  
+
+
+.menu__list{ @media screen and (max-width: 481px)
+  {display: none;}}
+.menu__button-burger .menu__icon-cross{display: none}
+
+
+
 .menu__link {
     font-weight: 500;
     font-size: 14px;
@@ -30,7 +61,9 @@
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     
     &--current{color: var(--active-button-color);}
+    
   }
+ 
   .menu__link {
     font-weight: 500;
     font-size: 14px;
@@ -42,6 +75,8 @@
     cursor: pointer;
     transition: color, 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    @media screen and (max-width: 480px)
+    {width: 480px;display: none; padding: 0;}
     
     
     &:hover{color: var(--active-button-color);
@@ -63,5 +98,7 @@
     height: 4px;
     border-radius: 4px;
     background-color: var(--active-button-color);
+    @media screen and (max-width: 481px)
+    {width: 480px;display: none;  }
   }
   
