--- a/scss/layout/_props-section.scss
+++ b/scss/layout/_props-section.scss
@@ -1,8 +1,11 @@
 /**Section props*/
 .props-section {
     padding-top: 94px;
+   
     &__container{display: flex;
         margin-top: 0;}
+        @media screen and (max-width: 480px)
+    {width: 480px;display: block;padding-top:30px;margin:0;};
   }
 
   
@@ -13,17 +16,20 @@
     gap: 30px;
     margin: 0;
     padding: 0;
+    @media screen and (max-width: 481px)
+    {width: 100%;display: block; margin-bottom: 30px;};
   }
   
   .props-section__item-container {
     display: flex;
     justify-content: center;
-    background-size: 270px 120px;
-    ;
     background-color: #F5F4FA;
     align-items: center;
     width: 270px;
     height: 120px;
+    @media screen and (max-width: 480px)
+    {   padding-right:15px; margin-top: 30px; width: 100%; };
+    
   }
   
   .props-section{
@@ -41,7 +47,13 @@
         letter-spacing: 0.03em;
         color: #757575;
         max-width: 270px;}
+        @media screen and (max-width: 480px)
+    {width: 100%;display: block; margin: 0;};
   }
   
- 
+ .props-section__text{@media screen and (max-width: 480px)
+  {display: inline; padding-right: 15px;  width: 100%; margin-bottom: 30px;}}
+  
+  .props-section__title{ @media screen and (max-width: 480px)
+    {  display: flex; justify-content: center;};}
   
