--- a/scss/layout/_subscribe.scss
+++ b/scss/layout/_subscribe.scss
@@ -5,10 +5,17 @@
     line-height: 16px;
     letter-spacing: 0.03em;
     text-transform: uppercase;
-    color: #FFFFFF;}
+    color: #FFFFFF;
+    @media screen and (max-width: 480px)
+    { width: 448px; margin-top:60px;}
+  }
 
-  .subscribe__form{margin-left: 90px;}
+  .subscribe__form{margin-left: 90px;
+    @media screen and (max-width: 480px)
+    {  width: 100%;margin-left:auto;margin-right:auto; display:table; text-align: center;}}
 
     .subscribe__input{margin-top: 20px; background-color: transparent; border: 1px solid rgba(255, 255, 255, 0.3);
       filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
-      border-radius: 4px; min-width: 356px; min-height: 50px; padding-left: 16px; color: white;} 
+      border-radius: 4px; max-width: 356px; min-height: 50px; padding-left: 16px; color: white; 
+      @media screen and (max-width: 480px)
+      {width: 100%; max-width: 100%;}}
