--- a/scss/base/_reset.scss
+++ b/scss/base/_reset.scss
@@ -23,3 +23,8 @@ span {
 a {
   text-decoration: none;
 }
+img{display: block;
+max-width: 100%;
+height: auto;
+object-fit: cover;
+object-position:center;}
