--- a/css/main.scss.css
+++ b/css/main.scss.css
@@ -687,7 +687,7 @@ body {
 }
 @media screen and (max-width: 480px) {
   .header__container {
-    width: 448;
+    width: 448px;
     margin-left: auto;
     margin-right: auto;
     position: relative;
@@ -695,12 +695,9 @@ body {
     padding-bottom: 16px;
   }
 }
-@media screen and (mix-width: 768px) {
+@media screen and (min-width: 481px) and (max-width: 1199px) {
   .header__container {
-    width: 768px;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
+    max-width: 100%;
   }
 }
 
