--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -4,15 +4,15 @@
     margin-left: auto;
     width: 100%;
     @media screen and (max-width: 480px)
-    {  width: 448;margin-left:auto;margin-right:auto;position: relative; padding-top: 16px; padding-bottom: 16px; };
+    {  width: 448px;margin-left:auto;margin-right:auto;position: relative; padding-top: 16px; padding-bottom: 16px; };
     
     
-    @media screen and (mix-width: 768px)
-    {width: 768px;display: flex; 
+    @media screen and (min-width: 481px) and (max-width:1199px)
+    {max-width: 100%;} 
     
     
     
-    }}
+    }
   header.no-transparency {
     background-color: white;
   
