--- a/scss/layout/_navigation.scss
+++ b/scss/layout/_navigation.scss
@@ -18,8 +18,10 @@
     gap: 50px;
     padding: 0;
     margin: 0;} 
-    @media screen and (max-width: 481px)
+    @media screen and (max-width: 480px)
     {display: none;}
+    @media screen and (min-width: 481px) and (max-width:768px)
+    {width: 100%; margin-right: 84px; margin-left:88px; }
 
    
 }
