--- a/scss/layout/_what-we-do-section.scss
+++ b/scss/layout/_what-we-do-section.scss
@@ -6,11 +6,17 @@
         gap: 30px;
         margin: 0;
         padding: 0;
-      } @media screen and (max-width: 480px)
+      } @media screen and (min-width: 0) and (max-width:1199px)
+      {max-width: 100%; display: none; } 
+      @media screen and (min-width: 480px) and (max-width:1199px )
       {display: none; padding-right: 15px;  width: 100%; margin-bottom: 30px;}}
   
-  .what-we-do__images{@media screen and (max-width: 480px)
-    {display: none; padding-right: 15px;  width: 100%; margin-bottom: 30px;}}
-    .what-we-do__title-hide{@media screen and (max-width: 480px)
-      {display: none; padding-right: 15px;  width: 100%; margin-bottom: 30px;}}
-      
+  .what-we-do__images{@media screen and (min-width: 481px) and (max-width:1199px)
+    {max-width: 100%; display: none; } 
+   
+    
+    .what-we-do__title-hide{@media screen and (min-width: 481px) and (max-width:768px)
+      {max-width: 100%; display: none; 
+        @media screen and (min-width: 0) and (max-width:1199px)
+        {max-width: 100%; display: none; } } 
+    }}
