--- a/scss/components/_galery.scss
+++ b/scss/components/_galery.scss
@@ -8,7 +8,7 @@
     justify-content: center;
     margin: 0;
     padding-left: 0;
-    @media screen and (max-width: 480px)
+    @media screen and (min-width: 480px)
     {max-width: 448px; flex-wrap: wrap; justify-content: left;} 
   }
 }
@@ -21,7 +21,7 @@
     padding-left: 0;
     margin-top: 50px;
     margin-bottom: 0;
-    @media screen and (max-width: 480px)
+    @media screen and (min-width: 480px)
     {max-width: 448px;}
   }
 
