--- a/scss/layout/_clients-section.scss
+++ b/scss/layout/_clients-section.scss
@@ -1,15 +1,26 @@
  .clients-section {
     padding-top: 94px;
     padding-bottom: 94px;
-
-  &__list{display: flex;
+    @media screen and (min-width: 0) and (max-width:767px)
+    {flex-direction: column; padding-top: 60px; }  
+    @media screen and (min-width: 768px) and (max-width:1199px)
+    { justify-content: center; padding-top: 60px; padding-bottom: 60px;}
+  
+    &__list{display: flex;
     align-items: center;
     justify-content: center;
     margin: 0;
     padding: 0;
-    gap: 30px; 
-    @media screen and (max-width: 480px)
-      {  width: 448;display: grid; grid-template-columns: 1fr 1fr; gap: 30px; margin: 0; align-items: center; justify-content: center; };}
+    gap: 30px;}
+
+    .clients-section__list{
+    @media screen and (min-width: 0) and (max-width:767px)
+    {display: grid; grid-template-columns: 1fr 1fr; justify-content: center;}
+    
+    /**tablet*/
+    @media screen and (min-width: 768px) and (max-width:1199px)
+    { max-width: 720px; padding:0;  display: grid; grid-template-columns: 1fr 1fr 1fr; justify-content: center;} 
+    justify-items: center;
   }
   
   
@@ -24,6 +35,14 @@
     justify-content: center;
     transition: color, 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
+    @media screen and (min-width: 0) and (max-width:767px)
+    {display: flex; justify-content: center;}
+    
+    /**tablet*/
+    @media screen and (min-width: 768px) and (max-width:1199px)
+    { max-width: 720px; padding:0;}
+
     &:focus{
       color: var(--active-button-color);
       border-color: var(--active-button-color);
@@ -33,8 +52,7 @@
     border-color: var(--active-button-color);
     transition: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);}
-     @media screen and (max-width: 480px)
-      {  width: 100%;margin:auto; align-items: center  ;}
+  }
   
 .clients-section__logo-icon {
     fill: currentColor;
