--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -1,129 +1,133 @@
 .footer {
-  padding: auto;
+  display: flex;
+  padding-top: 60px;
+  background-color: #2f303a;
+  min-height: 252px;
+  padding-bottom: 60px;
+  /**Mobile*/
+  @media screen and (min-width: 0) and (max-width:767px)
+  {max-width: 448px;   display: block;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;}
+  
+  
+&__container{display: flex;
+  
+  align-items: baseline; 
+  @media screen and (min-width: 0) and (max-width:767px)
+  {width: 100%;   display: table;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;}
+  }  
+}
+
+
+
+.footer__side{
+  &--social{margin-left: 70px;}
+  @media screen and (min-width: 0) and (max-width:767px)
+  {width: 480px;;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;}};
+
+.footer__list {
+  padding: 0;
+  margin-bottom: 0;
+  margin-top: 20px;
+}
+
+.footer__social-list {
+  display: flex;
+  gap: 10px;
+  padding: 0;
+  margin-top: 20px;
+  margin-bottom: 0;
+  @media screen and (min-width: 0) and (max-width:767px)
+    {max-width: 100%;;
+      display:flex;
+      align-items: center;
+      margin-left: auto;
+      margin-right: auto;}
+}
+
+.footer__social-link {
+  display: flex;
+  background-color: rgba(255, 255, 255, 0.1);
   ;
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+  cursor: pointer;
+  align-items: center;
+  gap: 10px;
+  justify-content: center;
+  transition: color, 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   
-    display: flex;
-    padding-top: 60px;
-    background-color: #2f303a;
-    min-height: 252px;
-    padding-bottom: 60px; @media screen and (max-width: 480px)
-    {width: 100%;display: block;padding-top:30px;margin:0;box-sizing:border-box;};}
-.footer__container{display: flex;
-    justify-content: center;
-    align-items: baseline;
-    margin: auto;
-    @media screen and (max-width: 480px)
-    {max-width: 448px;display: block;padding-top:30px;margin:0;display: block;box-sizing:border-box;};
-  }
+  &:hover{background-color: var(--active-button-color);
+      transition: color, 250ms;
+      transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);};
+  &:focus{ background-color: var(--active-button-color);
+      transition: color, 250ms;
+      transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);}
+}
 
-.footer__container{@media screen and (max-width: 480px)
-  { max-width:448px;margin-left:auto;margin-right:auto; padding: auto;  display:block; text-align: center; } }
-  
-  .footer__side{
-    &--social{margin-left: 70px;}
-    @media screen and (max-width: 480px)
-    {  max-width: 448px; margin:0;}
- 
-    
-  };
-  .footer__side--social{@media screen and (max-width: 480px){max-width:448px; margin: 0;}}
-  
-  .footer__list {
-    padding: 0;
-    margin-bottom: 0;
-    margin-top: 20px;
-    
-    
-  }
-  
-  .footer__social-list {
-    display: flex;
-    gap: 10px;
-    padding: 0;
-    margin-top: 20px;
-    margin-bottom: 0;
-    @media screen and (max-width: 480px)
-    {  width: 100%;justify-content:center; margin-bottom: 60px;}
-  }
-  
-  .footer__social-link {
-    display: flex;
-    background-color: rgba(255, 255, 255, 0.1);
-    ;
-    width: 44px;
-    height: 44px;
-    border-radius: 50%;
-    cursor: pointer;
-    align-items: center;
-    gap: 10px;
-    justify-content: center;
-    transition: color, 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-    
-    &:hover{background-color: var(--active-button-color);
-        transition: color, 250ms;
-        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);};
-    &:focus{ background-color: var(--active-button-color);
-        transition: color, 250ms;
-        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);}
-  }
-  
-  .footer__social-icon {
-    fill: white;;
-    transition: fill, 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+.footer__social-icon {
+  fill: white;;
+  transition: fill, 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 
-    &:hover{background-color: var(--active-button-color);
-        fill: white;
-        transition: 250ms;
-        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);};
-    &:focus{background-color: var(--active-button-color);
-        fill: white;
-        transition: 250ms;
-        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);};
-  }
+  &:hover{background-color: var(--active-button-color);
+      fill: white;
+      transition: 250ms;
+      transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);};
+  &:focus{background-color: var(--active-button-color);
+      fill: white;
+      transition: 250ms;
+      transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);};
+}
 
+
+.footer {&__title{
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 16px;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: #FFFFFF;} 
   
-  .footer__title{
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 16px;
-    letter-spacing: 0.03em;
-    text-transform: uppercase;
-    color: #FFFFFF;
-    @media screen and (max-width: 480px)
-    {max-width: 100%;}
-  } 
-  
-    
-    .footer__item{font-style: normal;
-        font-size: 14px;
-        line-height: calc(24 / 14);
-        letter-spacing: 0.03em;
-        color: #ffffff;
-        margin-top: 20px;}
-        
-  
-.footer__title{@media screen and (max-width: 480px){margin-top: 60px;}}
-  .footer__link{color: #FFFFFF;}
-  
-  .footer__item--mail  .footer__link--mail{
-    font-style: normal;
-    font-size: 14px;
-    line-height: calc(24/14);
-    letter-spacing: 0.03em;
-    color: rgba(255, 255, 255, 0.6);
-    margin-top: 9px;
-  
-  }
-  
-  .footer__item--phone .footer__link--phone {
-    font-style: normal;
-    font-size: 14px;
-    line-height: calc(24/14);
-    letter-spacing: 0.03em;
-    color: rgba(255, 255, 255, 0.6);
-    margin-top: 9px;
-    transition: color, 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1)
-  }
+  &__item{font-style: normal;
+      font-size: 14px;
+      line-height: calc(24 / 14);
+      letter-spacing: 0.03em;
+      color: #ffffff;
+      margin-top: 20px;}
+
+}
+
+.footer__link{color: #FFFFFF;}
+
+.footer__item--mail  .footer__link--mail{
+  font-style: normal;
+  font-size: 14px;
+  line-height: calc(24/14);
+  letter-spacing: 0.03em;
+  color: rgba(255, 255, 255, 0.6);
+  margin-top: 9px;
+width: 100%;
+}
+
+.footer__item--phone .footer__link--phone {
+  font-style: normal;
+  font-size: 14px;
+  line-height: calc(24/14);
+  letter-spacing: 0.03em;
+  color: rgba(255, 255, 255, 0.6);
+  margin-top: 9px;
+  transition: color, 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1)
+  width=100%
+}
