--- a/scss/layout/_main-window.scss
+++ b/scss/layout/_main-window.scss
@@ -1,8 +1,13 @@
 .main-window__container {
     text-align: center;
     min-height: 600px;
-    @media screen and (max-width: 480px)
-    {width: 100%;display: block};
+    @media screen and (min-width: 480px)
+    {width: 448px;display: block};
+         /**tablet*/
+    @media screen and (min-width: 768px) and (max-width:1199px)
+         {width: 720px; }
+    @media screen and (min-width: 768px) and (max-width:1200px)
+    {width: 1200px; }
   }
   
   .main-window {
@@ -16,8 +21,8 @@
     background-position: center;
     margin-right: auto;
     margin-left: auto;
-    @media screen and (max-width: 480px)
-    {max-width: 100%;display: block};
+    @media screen and (min-width: 480px)
+    {width: 1600px;display: block};
 
 &__title{font-style: normal;
     font-weight: 900;
@@ -26,8 +31,14 @@
     letter-spacing: 0.06em;
     text-transform: uppercase;
     color: #ffffff;}
-    @media screen and (max-width: 480px)
-    {width: 100%;display: block; background-position: auto; background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4));background-image:image-set(url("../images/studiopage/Background-hero/main-background-mobile/Headerimg.jpg") 1x,
+    @media screen and (min-width: 768px) and (max-width:1199px)
+    {width: 100%;display: block; background-position: auto; background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4));
+    background-image:linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),image-set(url("../images/studiopage/Background-hero/main-bacground-tablet/1.jpg") 1x,
+    url("../images/studiopage/Background-hero/main-bacground-tablet/2.jpg") 2x);};
+
+    @media screen and (min-width: 0) and (max-width:767px)
+    {width: 100%;display: block; background-position: auto; background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4));
+    background-image:linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),image-set(url("../images/studiopage/Background-hero/main-background-mobile/Headerimg.jpg") 1x,
       url("../images/studiopage/Background-hero/main-background-mobile/Headerimg@2x.jpg") 2x);};
 
   
