--- a/scss/layout/_modal.scss
+++ b/scss/layout/_modal.scss
@@ -11,7 +11,7 @@
     z-index: 1000;
     transition: opacity, 600ms linear, visibility 600ms ease-out;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-    @media screen and (max-width: 480px)
+    @media screen and (min-width: 480px)
     {max-width: 100%;display: block;margin-left:auto;margin-right:auto}
   
 
@@ -32,7 +32,7 @@
 
         color: #212121;
         margin-bottom: 12px;
-        @media screen and (max-width: 480px)
+        @media screen and (min-width: 480px)
       {  max-width: 100%;display: block;}
     }
 
@@ -51,7 +51,7 @@
     text-decoration: underline;
     color: var(--active-button-color);
     text-underline-position: under;
-    @media screen and (max-width: 480px)
+    @media screen and (min-width: 480px)
     {  max-width: 100%;display:inline;}
 }
 
@@ -59,7 +59,7 @@
     display: block;
     margin-bottom: 20px;
     text-align: center;
-    @media screen and (max-width: 480px)
+    @media screen and (min-width: 480px)
     {  max-width: 448px;display: block;}
   }
 }
@@ -119,7 +119,7 @@
     display: block;
     text-align: center;
     
-    @media screen and (max-width: 480px)
+    @media screen and (min-width: 480px)
     {  max-width: 448px;display: block;}
     
   }
@@ -134,12 +134,12 @@
     cursor: pointer;
     min-height: 40px;
     outline: none;
-    @media screen and (max-width: 480px)
+    @media screen and (min-width: 480px)
     {  max-width: 370px;display: block;}
     
     &:hover{   border-color: var(--active-button-color);}
     &:focus{ border-color: var(--active-button-color)}
-    @media screen and (max-width: 480px)
+    @media screen and (min-width: 480px)
     {  max-width: 100%;display: block;}
     text-align: left;
     
@@ -176,7 +176,7 @@
     resize: none;
     outline: none;
     @media screen and (min-width: 480px)
-    {max-width:100%;display: block;}
+    {max-max-width: 448px;;display: block;}
     &:hover{border-color: var(--active-button-color);}
     &:focus{border-color: var(--active-button-color);}
     
@@ -272,5 +272,5 @@ width: 100%;
 
     color: #757575;
     @media screen and (min-width: 480px)
-    {max-width:100%;display: inline;}
+    {max-max-width: 448px;;display: inline;}
 }
