--- a/scss/layout/_props-section.scss
+++ b/scss/layout/_props-section.scss
@@ -1,35 +1,59 @@
 /**Section props*/
 .props-section {
     padding-top: 94px;
-   
+    @media screen and (min-width: 0) and (max-width:767px)
+    {flex-direction: column; padding-top: 60px; }  
+    @media screen and (min-width: 768px) and (max-width:1199px)
+    { justify-content: center; padding-top: 60px; padding-bottom: 60px;}
     &__container{display: flex;
-        margin-top: 0;}
-        @media screen and (max-width: 480px)
-    {width: 480px;display: block;padding-top:30px;margin:0;};
-  }
-
+        margin-top: 0;
+        /**tablet*/
+    @media screen and (min-width: 768px) and (max-width:1199px)
+        { justify-content: center;  }
+         /**Mobile*/
+    @media screen and (min-width: 0) and (max-width:767px)
+    {flex-direction: column; }
+        
+    
+      }
+       
+    
   
  
   
   .props-section__list {
-    display: flex;
+    display:flex;
     gap: 30px;
     margin: 0;
     padding: 0;
-    @media screen and (max-width: 481px)
-    {width: 100%;display: block; margin-bottom: 30px;};
+
+    /**Mobile*/
+    @media screen and (min-width: 0) and (max-width:767px)
+    {display: block;}
+    
+    /**tablet*/
+    @media screen and (min-width: 768px) and (max-width:1199px)
+    { max-width: 100%; padding:0;  display: grid; grid-template-columns: 1fr 1fr; justify-content: center;}   }
+    
   }
   
   .props-section__item-container {
     display: flex;
     justify-content: center;
+    background-size: 270px 120px;
+    width: 270px;
     background-color: #F5F4FA;
     align-items: center;
-    width: 270px;
     height: 120px;
-    @media screen and (max-width: 480px)
-    {   padding-right:15px; margin-top: 30px; width: 100%; };
+    width: 100%;
     
+/**Mobile*/
+    @media screen and (min-width: 0) and (max-width:767px)
+    { display: flex; width: 100%; max-width: 450px; justify-content: center;}
+    
+     /**tablet*/
+    @media screen and (min-width: 768px) and (max-width:1199px)
+    { width: 354px; padding:0;  }
   }
   
   .props-section{
@@ -41,19 +65,26 @@
     color: #212121;
     margin-top: 30px;
     margin-bottom: 10px;}
+    /**Mobile*/
+    @media screen and (min-width: 0) and (max-width:767px)
+    { width: 100%; text-align: center;}
+    
     
     &__text{font-size: 14px;
         line-height: calc(24/14);
         letter-spacing: 0.03em;
         color: #757575;
-        max-width: 270px;}
-        @media screen and (max-width: 480px)
-    {width: 100%;display: block; margin: 0;};
+        }
+
+        /**Mobile*/
+    @media screen and (min-width: 0) and (max-width:767px)
+    { width: 100%;}
+    
+     /**tablet*/
+    @media screen and (min-width: 768px) and (max-width:1199px)
+    { width: 100%; }
   }
-  
- .props-section__text{@media screen and (max-width: 480px)
-  {display: inline; padding-right: 15px;  width: 100%; margin-bottom: 30px;}}
-  
-  .props-section__title{ @media screen and (max-width: 480px)
-    {  display: flex; justify-content: center;};}
-  
+  .props-section__text{   
+    @media screen and (min-width: 0) and (max-width:767px)
+    { width: 100%; text-align: left; padding-bottom: 30px;} }
+ 
