--- a/scss/layout/_subscribe.scss
+++ b/scss/layout/_subscribe.scss
@@ -6,16 +6,26 @@
     letter-spacing: 0.03em;
     text-transform: uppercase;
     color: #FFFFFF;
-    @media screen and (max-width: 480px)
-    { width: 448px; margin-top:60px;}
-  }
+    @media screen and (min-width: 0) and (max-width:767px)
+    {width: 100%;;
+      text-align: center;
+      margin-left: auto;
+      margin-right: auto;}
+    }
 
   .subscribe__form{margin-left: 90px;
-    @media screen and (max-width: 480px)
-    {  width: 100%;margin-left:auto;margin-right:auto; display:table; text-align: center;}}
+    @media screen and (min-width: 0) and (max-width:767px)
+    {width: 448px;;
+      text-align: center;
+      margin-left: auto;
+      margin-right: auto;} }
 
     .subscribe__input{margin-top: 20px; background-color: transparent; border: 1px solid rgba(255, 255, 255, 0.3);
+      @media screen and (min-width: 0) and (max-width:767px)
+  {   display: block;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;}
+  
       filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
-      border-radius: 4px; max-width: 356px; min-height: 50px; padding-left: 16px; color: white; 
-      @media screen and (max-width: 480px)
-      {width: 100%; max-width: 100%;}}
+      border-radius: 4px; min-width: 356px; min-height: 50px; padding-left: 16px; color: white;} 
