--- a/scss/layout/_team-section.scss
+++ b/scss/layout/_team-section.scss
@@ -3,6 +3,11 @@
     padding-top: 94px;
     padding-bottom: 94px;
     background-color: #f5f4fa;
+    @media screen and (min-width: 0) and (max-width:767px)
+    {flex-direction: column;  }  
+    @media screen and (min-width: 768px) and (max-width:1199px)
+    { justify-content: center; padding-top: 60px; padding-bottom: 60px;}
+   
     
     &__list{display: flex;
         gap: 30px;
@@ -10,8 +15,13 @@
         padding: 0;
       }
   }
-  .team-section__list{ @media screen and (max-width: 480px)
-    {  width: 448;display: block; };}
+  .team-section__list{ /**Mobile*/
+    @media screen and (min-width: 0) and (max-width:767px)
+    {display: block;}
+    
+    /**tablet*/
+    @media screen and (min-width: 768px) and (max-width:1199px)
+    { max-width: 100%; padding:0;  display: grid; grid-template-columns: 1fr 1fr; justify-content: center;}   }
   
 
   
