--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -26,12 +26,14 @@
 
 
 .footer__side{
-  &--social{margin-left: 70px;}
+  &--social{margin-left: 70px;
+  @media screen and (min-width: 0) and (max-width:767px){margin:0}}
   @media screen and (min-width: 0) and (max-width:767px)
-  {width: 480px;;
+  {width: 100%;;
     text-align: center;
     margin-left: auto;
-    margin-right: auto;}};
+    margin-right: auto; margin-bottom: 60px; margin-left: 0;} };
+ 
 
 .footer__list {
   padding: 0;
@@ -49,8 +51,8 @@
     {max-width: 100%;;
       display:flex;
       align-items: center;
-      margin-left: auto;
-      margin-right: auto;}
+      justify-content: center;
+      margin-right: auto; margin-bottom: 60px;}
 }
 
 .footer__social-link {
@@ -128,6 +130,6 @@ width: 100%;
   color: rgba(255, 255, 255, 0.6);
   margin-top: 9px;
   transition: color, 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1)
-  width=100%
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  width:100%;
 }
